kubernetes-config/traefik/traefik.yml
kind: Service
apiVersion: v1
metadata:
  name: traefik
spec:
  type: LoadBalancer
  loadBalancerIP: 104.199.2.150
  ports:
  - port: 80
    name: http
  - port: 443
    name: https
  selector:
    app: traefik-ingress-lb
