kubernetes-config/traefik/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-web-app
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  tls:
    - secretName: traefik-cert
  rules:
  - host: super.michaloo.hull.rocks
    http:
      paths:
      - path: /
        backend:
          serviceName: hull
          servicePort: 80
  - host: accounts.michaloo.hull.rocks
    http:
      paths:
      - path: /
        backend:
          serviceName: hull
          servicePort: 80
  - host: dashboard.michaloo.hull.rocks
    http:
      paths:
      - path: /
        backend:
          serviceName: hull-admin
          servicePort: 80
